<resources>
    <string name="app_name">AndroidMaster</string>
    <string name="man">Man</string>
    <string name="women">women</string>
    <string name="height">ALTURA</string>
    <string name="Weight">Peso</string>
    <string name="Age">Edad</string>
    <string name="calculate">Calculate</string>
    <string name="imc_result">IMC Result</string>
    <string name="recalculate">Re-Calculate</string>

    <string name="error">Error</string>
    <string name="title_bajo_peso">Bajo Peso</string>
    <string name="description_bajo_peso">Estas por debajo de lo optimo para tu peso y altura.</string>

    <string name="title_peso_nomal">Peso Normal</string>
    <string name="description_peso_nomal">Estas en lo optimo para tu peso y altura.</string>

    <string name="title_peso_superado">Sobrepeso</string>
    <string name="description_peso_superado">Estas por encima de lo optimo para tu peso y altura.</string>

    <string name="title_peso_obesidad">Obesidad</string>
    <string name="description_peso_Obesidad">Estas MUY por encima de lo optimo para tu peso y altura, te rescomendamos
        ir a un nutriologo
    </string>
    <string name="week_agenda">week\'s agenda</string>
    <string name="category_schedule">Category</string>
    <string name="registrarme">Registrarme</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
</resources>