<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingVertical="32dp"
        android:background="@color/background_app"
        tools:context=".imccalculator.ImcCalculatorActivity">


    <androidx.cardview.widget.CardView
            android:id="@+id/viewMale"
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/vieFemale"
            app:cardBackgroundColor="@color/background_component_selected">
        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:tint="@color/white"
                    android:src="@drawable/ic_male"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/man"
                    android:textAllCaps="true"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/title_text"

            />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
            android:id="@+id/vieFemale"
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/viewMale"
            app:cardBackgroundColor="@color/background_component_selected">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:tint="@color/white"
                    android:src="@drawable/ic_female"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/women"
                    android:textAllCaps="true"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/title_text"
            />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/viewHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/background_component"
            app:layout_constraintTop_toBottomOf="@+id/viewMale"
           >

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="16dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textAllCaps="true"
                    android:textColor="@color/title_text"
            />

            <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="120 cm"
                    android:textColor="@color/white"
                    android:textSize="38sp"
                    android:textStyle="bold"
            />

            <com.google.android.material.slider.RangeSlider
                    android:id="@+id/rsHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize = "1"
                    android:valueFrom = "120"
                    android:valueTo = "200"
            />
        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/viewWeight"
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@+id/viewHeight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/viewAge"
            app:cardBackgroundColor="@color/background_component"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
    >

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Weight"
                    android:textAllCaps="true"
                    android:textColor="@color/title_text"
            />

            <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="60"
                    android:textColor="@color/white"
                    android:textSize="38sp"
                    android:textStyle="bold"
            />

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnSubtractWeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:backgroundTint="@color/buttons"
                        android:src="@drawable/subtract_btn"
                        app:tint = "@color/white"
                />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnSumWeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttons"
                        android:src="@drawable/plus_btn"
                        app:tint = "@color/white"
                />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/viewAge"
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@+id/viewHeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/viewWeight"
            app:cardBackgroundColor="@color/background_component"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="32dp"
    >

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Age"
                    android:textAllCaps="true"
                    android:textColor="@color/title_text"
            />

            <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="20"
                    android:textColor="@color/white"
                    android:textSize="38sp"
                    android:textStyle="bold"
            />

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
            >

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnSubtractAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:backgroundTint="@color/buttons"
                        android:src="@drawable/subtract_btn"
                        app:tint = "@color/white"
                />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnSumAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttons"
                        android:src="@drawable/plus_btn"
                        app:tint = "@color/white"
                />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCalculate"
            android:layout_width="0dp"
            android:layout_height="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/buttons"
            android:text="@string/calculate"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
    />

</androidx.constraintlayout.widget.ConstraintLayout>